[gd_scene load_steps=8 format=3 uid="uid://cfaldipc5l1l4"]

[ext_resource type="PackedScene" uid="uid://bp28b7drlwoma" path="res://scenes/entities/player/knight_skin.tscn" id="1_1hmtu"]
[ext_resource type="Script" uid="uid://cipww6kawrowp" path="res://scenes/entities/player/player.gd" id="1_58kc7"]
[ext_resource type="PackedScene" uid="uid://bh7gkxhgw7roh" path="res://scenes/entities/player/camera_controller.tscn" id="2_635qg"]
[ext_resource type="PackedScene" uid="uid://tfbpi1ybvvvt" path="res://scenes/entities/player/pause_menu.tscn" id="5_8akj5"]
[ext_resource type="PackedScene" uid="uid://by7eelq332a0j" path="res://scenes/entities/player/ui.tscn" id="5_bjvvg"]
[ext_resource type="PackedScene" uid="uid://vneag7yqfcdc" path="res://scenes/vfx/heal_effect.tscn" id="6_8akj5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_58kc7"]
radius = 0.492201

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_58kc7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_58kc7")

[node name="CameraController" parent="." instance=ExtResource("2_635qg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
spring_length = 10.0
margin = 0.04
min_limit_x = -1.3
max_limit_x = 0.5
mouse_acceleration = 0.003

[node name="skin" parent="." instance=ExtResource("1_1hmtu")]

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0, 0.39088, 0)
bones/4/rotation = Quaternion(-0.558905, -0.0614666, -0.646668, 0.515429)
bones/5/rotation = Quaternion(2.0063e-08, -4.10741e-08, -0.490214, 0.871602)
bones/7/rotation = Quaternion(-0.320217, -0.325382, 0.143359, 0.878086)
bones/8/rotation = Quaternion(0.000378828, 0.000378796, -0.705715, 0.708496)
bones/14/rotation = Quaternion(-0.617445, 0.081325, 0.620401, 0.476708)
bones/15/rotation = Quaternion(2.05441e-08, 5.51046e-08, 0.513637, 0.858008)
bones/17/rotation = Quaternion(-0.318473, 0.30033, -0.224972, 0.870497)
bones/18/rotation = Quaternion(0.000681023, 0.000802142, 0.7064, 0.707812)
bones/24/rotation = Quaternion(0.993614, 0.083558, 0.0739356, 0.0168417)
bones/25/rotation = Quaternion(0.210978, 6.4937e-08, -1.38581e-07, 0.977491)
bones/26/rotation = Quaternion(-0.525557, -0.209046, 0.0459794, 0.823393)
bones/28/rotation = Quaternion(0.997051, -0.0296889, 0.031417, 0.0634033)
bones/29/rotation = Quaternion(0.285206, -6.39824e-08, 1.97329e-07, 0.958466)
bones/30/rotation = Quaternion(-0.56499, 0.11444, -0.0095563, 0.817067)
bones/47/position = Vector3(0.520841, 0.785302, -0.0576374)
bones/49/position = Vector3(-0.510844, 0.785302, 0.0597369)

[node name="1H_Sword_Offhand" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(1.3499e-06, 0.262864, 0.964832, 0.999991, -0.00393262, 0.00107045, 0.00407581, 0.964824, -0.262862, 0.512186, 0.633447, -0.00243533)

[node name="Badge_Shield" parent="skin/Rig/Skeleton3D" index="1"]
transform = Transform3D(1.37232e-06, 0.262864, 0.964832, 0.999991, -0.00393515, 0.00107112, 0.00407843, 0.964824, -0.262862, 0.662589, 0.633614, -0.0434117)

[node name="Rectangle_Shield" parent="skin/Rig/Skeleton3D" index="2"]
transform = Transform3D(1.37232e-06, 0.262864, 0.964832, 0.999991, -0.00393515, 0.00107112, 0.00407843, 0.964824, -0.262862, 0.662589, 0.633614, -0.0434117)

[node name="Round_Shield" parent="skin/Rig/Skeleton3D" index="3"]
transform = Transform3D(1.37232e-06, 0.262864, 0.964832, 0.999991, -0.00393515, 0.00107112, 0.00407843, 0.964824, -0.262862, 0.662589, 0.633614, -0.0434117)

[node name="Spike_Shield" parent="skin/Rig/Skeleton3D" index="4"]
transform = Transform3D(1.37232e-06, 0.262864, 0.964832, 0.999991, -0.00393515, 0.00107112, 0.00407843, 0.964824, -0.262862, 0.662589, 0.633614, -0.0434117)

[node name="1H_Sword" parent="skin/Rig/Skeleton3D" index="5"]
transform = Transform3D(-0.000472146, -0.151968, 0.988385, 0.999997, -0.00199663, 0.000170362, 0.00194785, 0.988383, 0.151969, -0.496128, 0.637718, 0.139195)

[node name="2H_Sword" parent="skin/Rig/Skeleton3D" index="6"]
transform = Transform3D(-0.000472162, -0.151968, 0.988385, 0.999997, -0.00199665, 0.000170376, 0.00194786, 0.988383, 0.151969, -0.496128, 0.637718, 0.139195)

[node name="Knight_Helmet" parent="skin/Rig/Skeleton3D" index="7"]
transform = Transform3D(0.99972, -1.40143e-09, 0.0236466, 1.39341e-09, 1, 3.55686e-10, -0.0236466, -3.22637e-10, 0.99972, 4.69869e-07, 1.20111, -1.19779e-07)

[node name="Knight_Cape" parent="skin/Rig/Skeleton3D" index="8"]
transform = Transform3D(0.996275, -5.14962e-09, 0.0862353, 5.13043e-09, 1, 4.44077e-10, -0.0862353, 1.88007e-15, 0.996275, -1.63023e-08, 1.20111, -1.40136e-07)

[node name="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="15"]
transform = Transform3D(0.000472101, -0.151968, -0.988385, -0.999997, -0.00199637, -0.000170357, -0.00194759, 0.988383, -0.151969, -0.491066, 0.637784, 0.106273)

[node name="AnimationPlayer" parent="skin" index="1"]
autoplay = "Idle"

[node name="AnimationTree" parent="skin" index="2"]
parameters/ShieldBlend/blend_amount = 0.0

[node name="Timers" type="Node" parent="."]

[node name="StaminaRecoveryTimer" type="Timer" parent="Timers"]
wait_time = 0.15
autostart = true

[node name="InvulTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[node name="UI" parent="." instance=ExtResource("5_bjvvg")]

[node name="PauseMenu" parent="." instance=ExtResource("5_8akj5")]
process_mode = 2
visible = false

[node name="HealEffect" parent="." instance=ExtResource("6_8akj5")]

[connection signal="timeout" from="Timers/StaminaRecoveryTimer" to="." method="_on_stamina_recovery_timer_timeout"]

[editable path="skin"]
